--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/base": "^5.0.0-beta.9",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@mui/x-data-grid": "^6.11.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
