--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.3.2",
     "@fullcalendar/core": "^6.1.9",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
     "@fullcalendar/list": "^6.1.9",
     "@fullcalendar/react": "^6.1.9",
     "@fullcalendar/timegrid": "^6.1.9",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/base": "^5.0.0-beta.9",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
@@ -27,12 +27,14 @@
     "@nivo/core": "^0.83.0",
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0",
     "yup": "^1.3.2"
